RESOLVED FIXED270093
[MSE] Fix build without release log
https://bugs.webkit.org/show_bug.cgi?id=270093
Summary [MSE] Fix build without release log
Olivier Blin
Reported 2024-02-26 09:21:07 PST
274853@main added the usage of logger in MediaSource, but missed one place for the RELEASE_LOG_DISABLED check.
Attachments
Olivier Blin
Comment 1 2024-02-26 09:23:37 PST
EWS
Comment 2 2024-02-27 01:40:58 PST
Committed 275371@main (30e6ecfa20b5): <https://commits.webkit.org/275371@main> Reviewed commits have been landed. Closing PR #25107 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-02-27 01:41:14 PST
Note You need to log in before you can comment on or make changes to this bug.