[MSE] Fix build without release log https://bugs.webkit.org/show_bug.cgi?id=270093

Reviewed by Alexey Proskuryakov.

Commit 274853@main added the usage of logger in MediaSource, but
it missed one place for the RELEASE_LOG_DISABLED check.

* Source/WebCore/Modules/mediasource/MediaSource.cpp:

Canonical link: https://commits.webkit.org/275371@main